# heimdall

./: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: CI.yml  Coverage.yml  general.yml
config/: permission-schema-ast.txt  permission-schema.ts
docs/: table usage & concepts.md  zanzibar.md
migrations/postgres/: 20250324123849_pg_init_setup.down.sql  20250324123849_pg_init_setup.up.sql  20250509065300_pg_init_schema.down.sql  20250509065300_pg_init_schema.up.sql
src/: lib.rs  main.rs
src/cmd/: mod.rs  status.rs
src/cmd/server/: mod.rs
src/cmd/status/: mod.rs
src/config/: database.rs
src/domain/: mod.rs  network.rs  relationtuple.rs  traversal.rs  uuid_mapping.rs
src/dtos/: mod.rs  relation_tuple.rs  traversal.rs
src/entities/: mod.rs  network.rs  relation_tuple.rs  traversal.rs  uuid_mapping.rs
src/entities/db/: mod.rs  network.rs  relationtuple.rs
src/entities/schema/: mod.rs  namespace.rs  relation.rs  subject.rs
src/error/: mod.rs
src/error/parser/: mod.rs
src/errors/: mod.rs  traversal.rs
src/repositories/: mod.rs  relation_tuple.rs  uuid_mapping.rs
src/repositories/relation_tuple/: helpers.rs  mod.rs  model.rs  repository.rs  traits.rs
src/repositories/uuid_mapping/: mod.rs  model.rs  repository.rs  traits.rs  utils.rs
src/schema/lexer/: lexer_test.rs  mod.rs
src/schema/parser/: cursor.rs  mod.rs  parser_test.rs
src/schema/token/: kind.rs  mod.rs
